<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DraggablePuzzleDemo</string>
    <string name="action_settings">Settings</string>
    <string name="btnStopName">停止計時</string>
    <string name="btnRestartName">重新計時</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="secondLevel">前往第二關</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="thirdLevel">前往第三關</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="fourthLevel">前往第4關</string>
    <string name="title_activity_fifth">FifthActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="fifthLevel">前往第5關</string>
    <string name="title_activity_sixth">SixthActivity</string>
    <string name="sixthLevel">前往第6關</string>
    <string name="title_activity_seven">SevenActivity</string>
    <string name="seventhLevel">前往第7關</string>
    <string name="title_activity_eightth">EightthActivity</string>
    <string name="eightthLevel">前往第8關</string>
    <string name="title_activity_nineth">NinethActivity</string>
    <string name="ninethLevel">前往第9關</string>
    <string name="title_activity_ten">TenActivity</string>
	<string name="tenthLevel">前往第10關</string>
</resources>
