<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    tools:context="com.example.draggablepuzzledemo.FourthActivity" >
	<LinearLayout
        android:id="@+id/fourthtopbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#888888"
        android:orientation="horizontal" >

		<!-- 顯示 計時器UI -->
        <TextView 
		    android:id="@+id/fourthTimer"
		    android:layout_width="40dp"
		    android:layout_height="20dp" 
		    android:background="#0000ff"
			android:textColor="#00ff00"
			android:text="00:00"/>

    </LinearLayout>
	<ImageView
        android:id="@+id/draggbleRangle_5_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_marginLeft="0dp"
       	android:layout_marginTop="20dp"
        android:src="@drawable/draggable_range" />
    
     <ImageView
        android:id="@+id/target_region_5_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:layout_marginLeft="60dp"
       	android:layout_marginTop="80dp"
        android:src="@drawable/target_region" />
	 <Button
        android:id="@+id/btnFourthStopTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="stopFourthTimer"
        android:text="@string/btnStopName" />

    <Button
        android:id="@+id/btnFourthRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="restartFourthTimer"
        android:text="@string/btnRestartName" />

    <ImageView
        android:id="@+id/green_down_tblock_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/draggbleRangle_5_5"
        android:src="@drawable/green_down_tblock" />

    <ImageView
        android:id="@+id/gray_right_tblock_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/draggbleRangle_5_5"
        android:layout_alignTop="@+id/draggbleRangle_5_5"
        android:src="@drawable/gray_right_tblock" />

    <ImageView
        android:id="@+id/purple_laydown_lblock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/draggbleRangle_5_5"
        android:layout_alignParentLeft="true"
        android:src="@drawable/purple_laydown_lblock" />

    <ImageView
        android:id="@+id/blue_laydown_lblock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/draggbleRangle_5_5"
        android:layout_alignRight="@+id/draggbleRangle_5_5"
        android:src="@drawable/blue_laydown_lblock" />
    
    <Button
        android:id="@+id/gotoFithLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="gotoFifthLevel"
        android:text="@string/fifthLevel" />

</RelativeLayout>
